class dict for use in streamlit app

--- a/Models-ID-Pokemon.ipynb
+++ b/Models-ID-Pokemon.ipynb
@@ -2,16 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import os\n",
     "import PIL\n",
     "import tensorflow as tf\n",
     "import time\n",
+    "import csv\n",
     "\n",
     "from tensorflow import keras\n",
     "from tensorflow.keras import layers\n",
@@ -2454,6 +2456,109 @@
    ],
    "source": [
     "graphmodel(vartracker[0][2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Need Class Names for Each Model for Streamlit App"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 3062 files belonging to 72 classes.\n",
+      "Using 2144 files for training.\n",
+      "Found 3062 files belonging to 72 classes.\n",
+      "Using 918 files for validation.\n",
+      "Found 1045 files belonging to 29 classes.\n",
+      "Using 732 files for training.\n",
+      "Found 1045 files belonging to 29 classes.\n",
+      "Using 313 files for validation.\n",
+      "Found 1031 files belonging to 27 classes.\n",
+      "Using 722 files for training.\n",
+      "Found 1031 files belonging to 27 classes.\n",
+      "Using 309 files for validation.\n",
+      "Found 1792 files belonging to 40 classes.\n",
+      "Using 1255 files for training.\n",
+      "Found 1792 files belonging to 40 classes.\n",
+      "Using 537 files for validation.\n",
+      "Found 735 files belonging to 18 classes.\n",
+      "Using 515 files for training.\n",
+      "Found 735 files belonging to 18 classes.\n",
+      "Using 220 files for validation.\n",
+      "Found 1110 files belonging to 29 classes.\n",
+      "Using 777 files for training.\n",
+      "Found 1110 files belonging to 29 classes.\n",
+      "Using 333 files for validation.\n",
+      "Found 2177 files belonging to 53 classes.\n",
+      "Using 1524 files for training.\n",
+      "Found 2177 files belonging to 53 classes.\n",
+      "Using 653 files for validation.\n",
+      "Found 967 files belonging to 27 classes.\n",
+      "Using 677 files for training.\n",
+      "Found 967 files belonging to 27 classes.\n",
+      "Using 290 files for validation.\n",
+      "Found 2974 files belonging to 78 classes.\n",
+      "Using 2082 files for training.\n",
+      "Found 2974 files belonging to 78 classes.\n",
+      "Using 892 files for validation.\n",
+      "Found 1509 files belonging to 32 classes.\n",
+      "Using 1057 files for training.\n",
+      "Found 1509 files belonging to 32 classes.\n",
+      "Using 452 files for validation.\n",
+      "Found 950 files belonging to 23 classes.\n",
+      "Using 665 files for training.\n",
+      "Found 950 files belonging to 23 classes.\n",
+      "Using 285 files for validation.\n",
+      "Found 4703 files belonging to 105 classes.\n",
+      "Using 3293 files for training.\n",
+      "Found 4703 files belonging to 105 classes.\n",
+      "Using 1410 files for validation.\n",
+      "Found 1567 files belonging to 34 classes.\n",
+      "Using 1097 files for training.\n",
+      "Found 1567 files belonging to 34 classes.\n",
+      "Using 470 files for validation.\n",
+      "Found 2252 files belonging to 53 classes.\n",
+      "Using 1577 files for training.\n",
+      "Found 2252 files belonging to 53 classes.\n",
+      "Using 675 files for validation.\n",
+      "Found 1824 files belonging to 46 classes.\n",
+      "Using 1277 files for training.\n",
+      "Found 1824 files belonging to 46 classes.\n",
+      "Using 547 files for validation.\n",
+      "Found 874 files belonging to 26 classes.\n",
+      "Using 612 files for training.\n",
+      "Found 874 files belonging to 26 classes.\n",
+      "Using 262 files for validation.\n",
+      "Found 5305 files belonging to 114 classes.\n",
+      "Using 3714 files for training.\n",
+      "Found 5305 files belonging to 114 classes.\n",
+      "Using 1591 files for validation.\n"
+     ]
+    }
+   ],
+   "source": [
+    "class_dict = {}\n",
+    "\n",
+    "for poketype in typelist:\n",
+    "    train_ds, val_ds, test_ds = getds(poketype)\n",
+    "    class_names = train_ds.class_names\n",
+    "    class_dict[poketype] = class_names\n",
+    "    \n",
+    "with open('data/pokemon_class_dict.csv', 'w') as csv_file:  \n",
+    "    writer = csv.writer(csv_file)\n",
+    "    for key, value in class_dict.items():\n",
+    "       writer.writerow([key, value])"
    ]
   }
  ],
